--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <!-- <link rel="icon" href="/favicon.ico" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hajime</title>
     </head>
