--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <!-- <link rel="icon" href="/favicon.ico" /> -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hajime</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="module" src="/main.ts"></script>
-    </body>
+
+<head>
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Content-Security-Policy" content="<%- VITE_APP_CSP %>" />
+    <title>
+        <%- VITE_APP_NAME %>
+    </title>
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="module" src="/main.ts"></script>
+</body>
+
 </html>
